legacy_importer/legacy-imp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-imp
  namespace: legacy-imp
spec:
  type: NodePort
  selector:
    app: legacy-imp-web
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
